# UnnamedHB1

./: .gitignore  CMakeLists.txt  CMakePresets.json
assets/: CMakeLists.txt
framework/: anim_model.c  anim_model.h  clip.c  collision.c  disp.c  model.c  pellet.c  pellet.h
src/: main.c
tools/: AAMF_FORMAT.md  USAGE_EXAMPLES.md  aamf2gltf.py  aif2png.py  amf2gltf.py  amf2obj-debug.py  amf2obj.py  amf_types.py  build.sh  colorv.gltf  cubeg4.amf  enemy.amf  gltf2aamf.py  gltf2amf.py  map.aamf  map.gltf  pellet.amf  png2aif.py  test.gltf  tex_cube.amf
